src/metrics/snapshots/big_code_analysis__metrics__abc__tests__perl_array_in_binary_operand_descends_to_scalar_context_value.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 3,
  "branches": 0,
  "conditions": 4,
  "magnitude": 5.0,
  "assignments_average": 1.5,
  "branches_average": 0.0,
  "conditions_average": 2.0,
  "assignments_min": 0,
  "assignments_max": 3,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 4
}
