src/metrics/snapshots/big_code_analysis__metrics__abc__tests__perl_array_in_binary_operand_is_not_unwrapped.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 2.0,
  "branches": 0.0,
  "conditions": 1.0,
  "magnitude": 2.23606797749979,
  "assignments_average": 1.0,
  "branches_average": 0.0,
  "conditions_average": 0.5,
  "assignments_min": 0.0,
  "assignments_max": 2.0,
  "branches_min": 0.0,
  "branches_max": 0.0,
  "conditions_min": 0.0,
  "conditions_max": 1.0
}
