src/metrics/snapshots/big_code_analysis__metrics__abc__tests__perl_complex_function_abc.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 3,
  "branches": 2,
  "conditions": 3,
  "magnitude": 4.69041575982343,
  "assignments_average": 1.5,
  "branches_average": 1.0,
  "conditions_average": 1.5,
  "assignments_min": 0,
  "assignments_max": 3,
  "branches_min": 0,
  "branches_max": 2,
  "conditions_min": 0,
  "conditions_max": 3
}
