src/metrics/snapshots/big_code_analysis__metrics__abc__tests__perl_if_scalar_variable_condition.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 1,
  "branches": 0,
  "conditions": 1,
  "magnitude": 1.4142135623730951,
  "assignments_average": 0.5,
  "branches_average": 0.0,
  "conditions_average": 0.5,
  "assignments_min": 0,
  "assignments_max": 1,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 1
}
