src/metrics/snapshots/big_code_analysis__metrics__abc__tests__perl_methods_arguments_with_conditions.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 1,
  "branches": 2,
  "conditions": 2,
  "magnitude": 3.0,
  "assignments_average": 0.5,
  "branches_average": 1.0,
  "conditions_average": 1.0,
  "assignments_min": 0,
  "assignments_max": 1,
  "branches_min": 0,
  "branches_max": 2,
  "conditions_min": 0,
  "conditions_max": 2
}
