src/metrics/snapshots/big_code_analysis__metrics__abc__tests__perl_numeric_and_string_comparisons_count_conditions.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 14,
  "branches": 0,
  "conditions": 14,
  "magnitude": 19.79898987322333,
  "assignments_average": 7.0,
  "branches_average": 0.0,
  "conditions_average": 7.0,
  "assignments_min": 0,
  "assignments_max": 14,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 14
}
